# Generative_AI_Work

./: LICENSE
Blog/blog/: app.py
Dailydo/: Dockerfile.dev  README.md  compose.yml  pyproject.toml
Dailydo/dailydo/: auth.py  db.py  main.py  models.py  setting.py
Dailydo/dailydo/router/: user.py
Dailydo/tests/: test_main.py
Streamlit_Tutorial/: pyproject.toml
Streamlit_Tutorial/assets/papers/: 1_📈_Plotting_Demo.py  2_🌍_Mapping_Demo.py
Streamlit_Tutorial/streamlit_tutorial/: advance_chat_bot.py  bmi_calculator.py  chat_app.py  chat_elements.py  emojis_streamlit.py  hello.py  invoice.py  main.py  pd_frame.py  secrets.toml  uber_picker.py
Tutorial_FastApi/: pyproject.toml
Tutorial_FastApi/tutorial_fastapi/: index.py  main.py  main1.py  main2.py  main3.py  main4.py  main_tutorial.py  type_hints.py
Tutorial_FastApi/tutorial_fastapi/config/: db.py
Tutorial_FastApi/tutorial_fastapi/models/: note.py
Tutorial_FastApi/tutorial_fastapi/routes/: note.py
Tutorial_FastApi/tutorial_fastapi/schemas/: note.py
Tutorial_FastApi/tutorial_fastapi/templates/: index.html
first/: pyproject.toml
first/first/: auth_bearer.py  database.py  main.py  micro_app.py  models.py  palin.py  schemas.py  utils.py
first/tests/: test_micro.py  test_palin.py
notes_app/: pyproject.toml
notes_app/notes_app/routes/: note.py
sqlmodel_project/: pyproject.toml
sqlmodel_project/sqlmodel_project/: main.py
