[tool.poetry]
name = "tutorial-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
httpie = "^3.2.2"
requests = "^2.31.0"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
sqlmodel = "^0.0.18"
psycopg2 = "^2.9.9"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
